<resources>
    <string name="app_name">EMVI</string>
    <string name="error_in_loading_data">Error by loading data</string>
    <string name="movie_poster">movie poster</string>
    <string name="video_url">http://img.youtube.com/vi/</string>
    <string name="video_play_url">http://www.youtube.com/watch?v=</string>
    <string name="poster_url">http://image.tmdb.org/t/p/w500</string>
    <string name="api_key">ee1b47f142dfc5e38d8fc312dc5d9dad</string>
    <string name="test_rate">4/5</string>
    <string name="test_title">Avengers 4</string>
    <string name="trending_title">Trending movies</string>
    <string name="popular_movies">Popular movies</string>
    <string name="top_rated_movies">Top rated movies</string>
    <string name="your_favorites">Your favorites</string>
    <string name="movie_position">MOVIE_POSITION</string>
    <string name="movie_list">MOVIE_LIST</string>
    <string name="backdrop">backdrop</string>
    <string name="name">Name:</string>
    <string name="overview">Overview</string>
    <string name="overview_test">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="review">review</string>
    <string name="share">share</string>
    <string name="add">Add</string>
    <string name="type_share">text/plain</string>
    <string name="youtube_trailers">Youtube trailers</string>
    <string name="test_video_names">Avenger trailer 1</string>
    <string name="error_review">Error! Please verify your Internet connection</string>
    <string name="trailer_error">Error! Please verify your Internet connection</string>
</resources>
