<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main_toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_height"
        android:background="@android:color/transparent"
        android:elevation="@dimen/app_bar_layout_elevation"
        android:theme="@android:style/ThemeOverlay.Material.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main_collapsing_tb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:expandedTitleMarginEnd="@dimen/collapse_expandedTitle_end"
            app:expandedTitleMarginStart="@dimen/collapse_tb_expandedTitle_start"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/backdrop"
                    android:fitsSystemWindows="true"
                    android:maxHeight="@dimen/max_height_backdrop"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/ic_launcher_background" />
            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fitsSystemWindows="true"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/detail_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/detail_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_layout_info"
                android:weightSum="5">

                <ImageView
                    android:id="@+id/detail_poster"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/padding_layout_info"
                    android:layout_marginBottom="@dimen/padding_layout_info"
                    android:layout_weight="2"
                    android:contentDescription="@string/poster_url"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/ic_launcher_foreground" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/detail_info_margin"
                    android:layout_weight="3"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_layout_info">

                    <TextView
                        android:id="@+id/movie_detail_original_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/padding_tv_info"
                        android:hyphenationFrequency="none"
                        android:padding="@dimen/padding_tv_info"
                        tools:text="Title: Avenger" />

                    <TextView
                        android:id="@+id/movie_detail_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/padding_tv_info"
                        android:padding="@dimen/padding_tv_info"
                        tools:text="Language: en" />


                    <TextView
                        android:id="@+id/movie_detail_rate_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/padding_tv_info"
                        android:padding="@dimen/padding_tv_info"
                        tools:text="Vote count: 3000" />

                    <TextView
                        android:id="@+id/movie_detail_popularity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/padding_tv_info"
                        android:padding="@dimen/padding_tv_info"
                        tools:text="Popularity: 12.083976" />


                    <TextView
                        android:id="@+id/movie_detail_release"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/padding_tv_info"
                        android:padding="@dimen/padding_tv_info"
                        tools:text="Release date: January 3, 2018" />

                    <RatingBar
                        android:id="@+id/movie_detail_rating_bar"
                        style="@android:style/Widget.Material.Light.RatingBar.Indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_tv_info"
                        android:isIndicator="false"
                        android:numStars="5"
                        android:stepSize="0.1"
                        tools:rating="3" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <ImageButton
                            android:id="@+id/add_button"
                            style="@android:style/Widget.Material.Button.Borderless"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:contentDescription="@string/add"
                            android:src="@drawable/ic_add_box_white_48dp" />

                        <ImageButton
                            android:id="@+id/review_button"
                            style="@android:style/Widget.Material.Button.Borderless"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:contentDescription="@string/review"
                            android:src="@drawable/ic_rate_review_white_48dp" />

                        <ImageButton
                            android:id="@+id/share_button"
                            style="@android:style/Widget.Material.Button.Borderless"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:contentDescription="@string/share"
                            android:src="@drawable/ic_share_white_48dp" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/movie_detail_overview_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_detail_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_overview_text"
                    tools:text="@string/overview_test" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/review_layout_height">

                <TextView
                    android:id="@+id/movie_reviews_error"
                    style="@android:style/TextAppearance.Material"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/error_review"
                    android:textAlignment="center" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/movie_reviews_rv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/padding_review_rv">

                </android.support.v7.widget.RecyclerView>

                <ProgressBar
                    android:id="@+id/movie_review_pb"
                    style="@android:style/Widget.ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/trailer_layout_height">

                <TextView
                    android:id="@+id/movie_trailer_error"
                    style="@android:style/TextAppearance.Material"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/trailer_error"
                    android:textAlignment="center" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/movie_trailer_rv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/padding_review_rv">

                </android.support.v7.widget.RecyclerView>

                <ProgressBar
                    android:id="@+id/movie_trailer_pb"
                    style="@android:style/Widget.ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal" />
            </FrameLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>